--- a/src/styles.css
+++ b/src/styles.css
@@ -158,7 +158,7 @@ img {
  * Стили компонента Modal
  */
 
-.Overlay {
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -171,7 +171,7 @@ img {
   z-index: 1200;
 }
 
-.Modal {
+.modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
 }
