--- a/src/styles.css
+++ b/src/styles.css
@@ -69,15 +69,16 @@ img {
   background-color: #fff;
   border-radius: 3px;
   overflow: hidden;
+  padding-left: 5px;
 }
 
 .searchForm-button {
+ 
   display: inline-block;
-  width: 48px;
+  width: 60px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');  background-size: 40%;
-  background-repeat: no-repeat;
+    background-repeat: no-repeat;
   background-position: center;
   opacity: 0.6;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -90,15 +91,9 @@ img {
 }
 
 .searchForm-button-label {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  clip-path: inset(50%);
-  border: 0;
+  color: #303f9f;
+  padding: 2px;
+  
 }
 
 .searchForm-input {
@@ -179,7 +174,17 @@ img {
 /*
 * Стили компонента Buton (Load more)
 */
+.buttonContainer{
+display: flex;
+align-items: center;
+justify-content: center;
+margin-top: 20px;
+margin-bottom: 30px;
+}
+
+
 .button {
+ 
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
